# colss

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.cpp  colab.sh  localtest.sh  pyproject.toml  setup.py
.cache/clangd/index/: binding.cpp.D67EF12664C8BB59.idx  binding.cpp.FA87DA1C81AAE778.idx  compact.hpp.993B09E99017A6B6.idx  eval.hpp.B0FC35C861B67613.idx  exprtk.hpp.312A313567039FDD.idx  exprtk.hpp.65376913D042A6F3.idx  mean.hpp.4140C965B03A27C3.idx  prod.hpp.3A6F57CA44E13D40.idx  query.hpp.6AAA26F6D439F8AD.idx  sigma.hpp.A5D152B272BE5778.idx  sum.hpp.8D53E92401A1F718.idx  sum.hpp.AA27825180FC048A.idx
.github/workflows/: pr-test.yml  wheels.yml
colss/: __init__.py
fun/: mean.hpp  median.hpp  prod.hpp  query.hpp  sd.hpp  sigma.hpp  sum.hpp  var.hpp
include/: compact.hpp  quickselect.hpp
test/: test_colss.py
wheelhouse/: colss-0.1.7-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
