[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "colss"
version = "0.1.1"
description = "Less verbose Mathematical exp evaluator for pandas,numpy and polar"
authors = [{name = "Siva Prasad A"}]
readme = "README.md"
requires-python = ">=3.8"
